[metadata]
name = jsonrpclib
version = 0.2.1
author = Josh Marshall
author_email = catchjosh@gmail.com
url = https://github.com/joshmarshall/jsonrpclib
long_description = file: README.md
long_description_content_type = text/markdown
description = Implementation of the JSON-RPC v2.0 specification (backwards-compatible) as a client library.

[options]
packages = jsonrpclib
python_requires = >=3.5
